# model-train

./: .gitignore  convert.ipynb  crop.ipynb  forest_baseline.ipynb  forest_omsk_train_model_2.ipynb  forest_omsk_train_model_3.ipynb  pyproject.toml
dataset/: forest.yaml
